# clockify-llm

./: .gitignore  LICENSE  README.md  description_generator.py  git_log_reader.py  llm_config.py  main.py  setup.cfg  setup.py
.github/workflows/: workflow.yml
