[metadata]
name = clockify_llm
version = 0.1
author = Thalinda Bandara
description = Clockify LLM Console Tool
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.8

[options]
py_modules = llm_config
install_requires =
    python-dotenv
    langchain
    langchain-openai
    transformers
    torch

[options.entry_points]
console_scripts =
    clockify-llm = llm_config:main
